@@ -17,5 +17,6 @@ default_theme:<%= text_field "donenv", "default_theme" %><br>
 trackback_enable_time:<%= text_field "donenv", "trackback_enable_time" %><br>
 akismet_key:<%= text_field "donenv", "akismet_key" %><br>
 notify_level:<%= text_field "donenv", "notify_level" %><br>
+ping_async:<%= text_field "donenv", "ping_async" %><br>
 <%= submit_tag "save" %>
 <% end %>
