@@ -33,6 +33,7 @@
     <td>trackback_enable_time</td>
     <td>akismet_key</td>
     <td>notify_level</td>
+    <td>ping_async</td>
   </tr>
   <% @don_envs.each do |co| %>
   <tr>
@@ -65,6 +66,7 @@
     <td><%=h co.trackback_enable_time %></td>
     <td><%=h co.akismet_key %></td>
     <td><%=h co.notify_level %></td>
+    <td><%=h co.ping_async %></td>
 
   </tr>
   <% end %>
